GNOME Bugzilla – Bug 766661
gltestsrc,glmosaic: fix shader leaks
Last modified: 2016-05-24 13:36:25 UTC
.
Created attachment 328190 [details] [review] glmosaic: fix shader leak gst_gl_mosaic_init_shader() is called twice with test_glmosaic so the first shader was leaked.
Created attachment 328191 [details] [review] gltestsrc: free the src_impl when finalizing This one was never freed when the element was destroyed.
Created attachment 328192 [details] [review] gltestsrc: fix shaders ref counting The gltestsrc element uses two shaders: color_shader and snow_shader. Those are alternatively assigned to the SrcShader->shader pointer and their reference was transferred to it. Only the SrcShader->shader was unreffed (in _src_shader_deinit()) so only one shader was properly freed, the other one was leaked. Fixed this by giving an extra ref to SrcShader->shader and unreffing the 2 shaders in _src_smpte_free().
Review of attachment 328191 [details] [review]: This should be done earlier, say in _stop() instead.
commit fe7dd131f5a441fc3f73790bc8447cb454362dc9 Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk> Date: Thu May 19 17:05:33 2016 +0300 gltestsrc: fix shaders ref counting The gltestsrc element uses two shaders: color_shader and snow_shader. Those are alternatively assigned to the SrcShader->shader pointer and their reference was transferred to it. Only the SrcShader->shader was unreffed (in _src_shader_deinit()) so only one shader was properly freed, the other one was leaked. Fixed this by giving an extra ref to SrcShader->shader and unreffing the 2 shaders in _src_smpte_free(). https://bugzilla.gnome.org/show_bug.cgi?id=766661 commit 2572e3d25c1192faba7bc89d26d26192efdd0481 Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk> Date: Thu May 19 16:55:31 2016 +0300 glmosaic: fix shader leak gst_gl_mosaic_init_shader() is called twice with test_glmosaic so the first shader was leaked. https://bugzilla.gnome.org/show_bug.cgi?id=766661
Created attachment 328369 [details] [review] gltestsrc: fix src_impl leak
commit dff46e3239e4337de37b25ad8970af2335ad74cf Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk> Date: Mon May 23 10:40:58 2016 +0300 gltestsrc: fix src_impl leak https://bugzilla.gnome.org/show_bug.cgi?id=766661